--- a/practice-02/styles/font.css
+++ b/practice-02/styles/font.css
@@ -38,6 +38,7 @@
 .card-footer {
   font-weight: var(--font-weight-medium);
   line-height: var(--line-height-small);
+  font-size: var(--font-size-base);
 }
 
 /* font */
