--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -116,7 +116,7 @@ a {
   background-color: var(--west_chester-grey);
 }
 
-.card-img
+.card-img,
 .card-header,
 .card-body{
   margin-bottom: 1rem;
@@ -404,45 +404,34 @@ a {
 /*------------------------------------*\
   #marketing-SECTION
 \*------------------------------------*/
+.marketing .container {
+  margin-bottom: 5rem;
+}
 .marketing-content {
-  /* display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 2fr; */
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+  row-gap: 46px;
+  /* display: flex;
+  justify-content: space-between; */
   /* align-items: center; */
 }
-.marketing-right, .marketing-left {
-  width: 49%;
-}
-.marketing-right {
-  padding-top: 33px;
-}
-.marketing  {
+.marketing .card {
   width: 100%;
-  padding-bottom: 24px;
 }
-
-.marketing-right .card {
+.marketing-content .card.card-horizontal {
   display: flex;
-  flex-direction: row;
+  flex-direction: column-reverse;
+  align-items: flex-start;
   justify-content: space-between;
-  align-items: flex-end;
 
   padding-top: 17px;
   border-top: 1px solid var(--west_chester-grey) ;
 }
-.card-horizontal{
-  width: 85%;
+.card .card-horizontal-left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
-
-.marketing-right .card-header {
-  margin-bottom: 24px ;
-}
-.card-horizontal .card-text {
-  margin-bottom: 32px;
-}
-
 /*------------------------------------*\
   #article-SECTION
 \*------------------------------------*/
@@ -784,6 +773,31 @@ a {
   /* products */
   .product-content {
     grid-template-columns: repeat(3,1fr);
+  }
+  /***********************/
+  /* marketing */
+  .marketing-content {
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(3, 1fr) ;
+    column-gap: 30px;
+    row-gap: 0;
+    align-items: start;
+  }
+  .marketing-content .card.card-horizontal{
+    flex-direction: row;
+    align-items: flex-end;
+  }
+  .card-horizontal {
+    margin-top: 2rem;
+  }
+  .card-horizontal .card-header {
+    margin-bottom: 0;
+    width: 20%;
+    text-align: end;
+  }
+ 
+  .marketing-content .card.card-img{
+    grid-row: 1/4;
   }
 }
 
