Fix : fix comment

--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -655,13 +655,7 @@ a {
 \*------------------------------------*/
 /* container */
 
-/* default */
-/*Small smartphone*/
-
-/*Iphone(480 x 640)*/
-@media screen and (min-width: 320px) {}
-
-/*Tablet nhỏ(480 x 640)*/
+/*Small tablet(480 x 640)*/
 @media screen and (min-width: 480px) {
   .service-img {
     height: 45vh;
