--- a/practice-02/styles/font.css
+++ b/practice-02/styles/font.css
@@ -41,7 +41,7 @@
   font-size: var(--font-size-base);
 }
 
-/* .heading-sm {
+.heading-sm {
   font-size: var(--font-size-small);
   font-weight: var(--font-weight-medium);
   line-height: var(--line-height-small);
@@ -51,7 +51,7 @@
   font-weight: var(--font-weight-medium);
   line-height: var(--line-height-medium);
 }
- */
+
 
 
 
