--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -22,8 +22,7 @@ a {
   max-width: 1440px;
   /* change : width: 8 */
   margin: auto;
-  padding-right: unset;
-  padding-left: unset;
+  padding: 0 1.5rem;
 }
 .container-fluid {
   padding-left: 0;
@@ -43,6 +42,11 @@ a {
   font-weight: var(--font-weight-bold);
   font-size: var(--font-size-medium);
   line-height: var(--line-height-small);
+}
+.btn:first-child:active {
+  background-color: unset;
+  border-color: unset;
+  color: var(--black);
 }
 
 .btn-primary {
@@ -112,11 +116,10 @@ a {
   background-color: var(--west_chester-grey);
 }
 
-.card-img
+.card-img,
 .card-header,
-.card-body,
-.card-footer{
-  margin-bottom: 24px;
+.card-body{
+  margin-bottom: 1rem;
 }
 .card-img .card-header {
   padding-bottom: 14px;
@@ -161,18 +164,15 @@ a {
   background: var(--lighthouse);
 }
 
+.header .container {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+
+  margin-bottom: 4.5rem;
+}
+
 /* header-navbar */
-.header-navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  padding: 29px 0;
-}
-.logo {
-  margin-right: 60px;
-}
-
+  /*@Hover::before */
 .header-navbar .nav-menu .item::before {
   content: "";
   width: 0px;
@@ -183,25 +183,30 @@ a {
   background-color: var(--alienated);
   transition: all 0.5s;
 }
-
 .nav-menu .item:hover::before {
   width: 100%;
 }
 
-/* nav */
+/* navbar */
 .navbar-expand-lg .navbar-collapse {
   justify-content: space-between;
 }
-.header .nav-pills .nav-link.active {
-  background-color: none;
-}
-.navbar {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+
+.navbar-expand-lg .navbar-nav .nav-link {
+  padding-left: unset;
+  padding-right: unset;
 }
 
+.header-navbar .nav-pills .nav-link.active {
+  background-color: none;
+}
+
+.header-navbar .nav-menu .navbar-nav {
+  margin-bottom: 15px;
+}
+.header-navbar .navbar-toggler{
+  border: none;
+}
 .nav-link {
   padding: unset;
   color: unset;
@@ -210,9 +215,9 @@ a {
   color: unset;
 }
 
-.nav-menu .nav-item {
+/* .nav-menu .nav-item {
   margin-right: 40px;
-}
+} */
 
 .nav-menu .item {
   position: relative;
@@ -223,7 +228,6 @@ a {
 .nav-button .btn-secondary {
   background-color: var(--crab-nebula);
   color: var(--white);
-  margin-left: 16px;
   display: inline;
 }
 .navbar .item {
@@ -235,8 +239,9 @@ a {
 
 /* header-carousel */
 .header-carousel {
-  padding-top: 70px;
-  width: 60%;
+  margin-top: 50px;
+  margin-bottom: 2rem;
+  width: 100%;
 }
 
 .header-carousel .heading-lg {
@@ -245,18 +250,10 @@ a {
 
 /* header__tab */
 .header-tab {
-  margin-top: 100px;
   /* err: padding-top > border-box */
   width: 100%;
 }
 
-.header-tab .nav-tabs {
-  justify-content: flex-start;
-}
-
-.shape {
-  display: none;
-}
 .nav-mark {
   color: var(--black);
 }
@@ -279,8 +276,44 @@ a {
   transition: all 0.5s;
 }
 
+.nav-menu {
+  display: block;
+}
+
+.nav-menu .nav-pills .nav-link {
+  padding: unset;
+}
+
+.header-tab .nav-tabs {
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  align-items: center;
+}
+
+.header-tab .nav-tabs .nav-mark {
+  width: 100%;
+  padding: 0.875rem;
+  background-color: var(--white);
+  border: 0.0625rem solid var(--gainsboro);
+  /* 0.0625 = 1px */
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.shape {
+  display: inline;
+}
+
+.nav-tabs .item {
+  display: none;
+  margin-right: 0;
+}
+
 .nav-menu .nav-pills .nav-link.active {
-  color: black;
+  color: var(--black);
 }
 .nav-tabs {
   border-bottom: unset;
@@ -300,14 +333,12 @@ a {
 }
 
 .service .container {
-  margin-top: 120px;
-  display: flex;
-  justify-content: space-between;
+  margin-bottom: 5rem;
 }
 
 .service-left,
 .service-right {
-  width: 50%;
+  width: 100%;
 }
 
 /* service-left */
@@ -315,10 +346,11 @@ a {
   border-bottom: 1px solid var(--west_chester-grey);
   border-top: 1px solid var(--west_chester-grey);
 
-  margin-right: 30px;
-  padding-top: 24px;
-  padding-bottom: 21px;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
+
 .service-left .card-body {
   width: 90%;
 }
@@ -328,12 +360,11 @@ a {
   border-radius: 8px;
   background-color: var(--white);
   box-shadow: 1px 0 50px rgb(0 0 0 / 10%);
-  padding: 20px;
 }
 
 .service-left .card-text {
-  margin-bottom: 120px;
-  margin-top: 14px;
+  margin-bottom: 2rem;
+  margin-top: 0.875rem;
   letter-spacing: -0.555556px;
 }
 
@@ -349,7 +380,7 @@ a {
   #Product-SECTION
 \*------------------------------------*/
 .product .container {
-  margin-top: 120px;
+  margin-bottom: 5rem;
 }
 
 .product-content {
@@ -357,10 +388,8 @@ a {
   flex-wrap: wrap;
   justify-content: space-between; */
   display: grid;
-  column-gap: 30px;
-  row-gap: 120px;
-  grid-template-columns: repeat(3, 1fr);
-  margin-bottom: 120px;
+  row-gap:  2.875rem;
+  grid-template-columns: repeat(1, 1fr);
 }
 
 
@@ -375,45 +404,34 @@ a {
 /*------------------------------------*\
   #marketing-SECTION
 \*------------------------------------*/
+.marketing .container {
+  margin-bottom: 5rem;
+}
 .marketing-content {
-  /* display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 2fr; */
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+  row-gap: 46px;
+  /* display: flex;
+  justify-content: space-between; */
   /* align-items: center; */
 }
-.marketing-right, .marketing-left {
-  width: 49%;
-}
-.marketing-right {
-  padding-top: 33px;
-}
-.marketing  {
+.marketing .card {
   width: 100%;
-  padding-bottom: 24px;
 }
-
-.marketing-right .card {
+.marketing-content .card.card-horizontal {
   display: flex;
-  flex-direction: row;
+  flex-direction: column-reverse;
+  align-items: flex-start;
   justify-content: space-between;
-  align-items: flex-end;
 
   padding-top: 17px;
   border-top: 1px solid var(--west_chester-grey) ;
 }
-.card-horizontal{
-  width: 85%;
+.card .card-horizontal-left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
-
-.marketing-right .card-header {
-  margin-bottom: 24px ;
-}
-.card-horizontal .card-text {
-  margin-bottom: 32px;
-}
-
 /*------------------------------------*\
   #article-SECTION
 \*------------------------------------*/
@@ -636,227 +654,175 @@ a {
   @media queries
 \*------------------------------------*/
 /* container */
-@media screen and (min-width: 1200px) {
-  /* > 1200px */
-  .container {
-    padding: 0 9.375rem;
-  }
-}
-@media screen and (min-width: 1024px) and (max-width: 1200px) {
-  /* 1024px < 1200 px */
-  .container {
-    padding: 0 3.75rem;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  /* 768px < 1024px */
-  .container {
-    padding: 0 2.5rem;
-  }
-}
-@media screen and (max-width: 768px) {
-  /* < 768px  */
-  .container {
-    padding: 0 1.56rem;
-  }
-  .service .container {
-    margin-top: 4.375rem;
-  }
-  .product .container {
-    margin-top: 5rem;
-  }
-  .marketing .container {
-    margin-top: 5rem;
-  }
-}
-/* header */
-@media screen and (min-width: 1100px) {
-  .nav-button .btn-secondary {
-    width: max-content;
-  }
-}
-@media screen and (max-width: 1100px) and (min-width: 992px) {
-  .header-navbar {
-    padding-bottom: 0;
-  }
-  .header-navbar .container-fluid {
-    display: flex;
-    flex-direction: column;
-  }
-  .header-navbar .nav-menu {
-    width: 100%;
+
+/*Small tablet(480 x 640)*/
+@media screen and (min-width: 480px) {
+  .service-img {
+    height: 45vh;
   }
 
-  .logo {
-    margin-right: 0;
+  /******************/
+  /* products */
+  .product-content {
+    grid-template-columns: repeat(2,1fr);
+    gap: 30px;
+    row-gap: 7.5rem;
   }
-}
-@media screen and (max-width: 768px) {
-  /*  < 768px */
-  .header-carousel {
-    margin-top: 1.4375rem;
-    padding-top: 0;
-    /* width: 80%; */
-  }
-  .header-tab {
-    margin-top: 3.125rem;
-  }
-}
-@media screen and (max-width: 955px) {
-  /*  < 905px */
-  .header-carousel {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 991px) {
-  .header-navbar .nav-menu .nav-item {
-    margin-right: 0;
-  }
-  .nav-button .btn-secondary {
-    margin-left: 0;
-  }
+    .card-header,
+    .card-body {
+      margin-bottom: 1.5rem;
+    }
 }
 
-/*header-tab  */
-/* dropdown */
-@media screen and (max-width: 640px) {
-  /* < 640px */
-  .nav-menu {
-    display: block;
-  }
-  .nav-menu .nav-pills .nav-link {
-    padding: unset;
-  }
-  .header .container {
-    padding-bottom: 1.5rem;
-  }
-  .header-tab {
-    margin-top: 2rem;
-  }
-  .header-tab .nav-tabs {
-    width: 100%;
-    max-width: 40rem;
-    margin: auto;
-    text-align: center;
-    align-items: center;
-  }
-  .header-tab .nav-tabs .nav-mark {
-    width: 100%;
-    padding: 0.875rem;
-    background-color: var(--white);
-    border: 0.0625rem solid var(--gainsboro);
-    /* 0.0625 = 1px */
-    border-radius: 0.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .shape {
-    display: inline;
-  }
-  .nav-tabs .item {
-    display: none;
-    margin-right: 0;
-  }
-}
-/* service  */
-@media screen and (max-width: 932px) {
-  /* 934px */
-  .service .container {
-    display: block;
-  }
-  .service-left,
-  .service-right {
-    width: 100%;
-  }
-  .service-left {
-    margin-bottom: 30px;
-  }
-  .service-img {
-    height: 50vh;
-  }
-}
-@media screen and (max-width: 768px) {
-  .service .container {
-    margin-top: 70px;
-  }
-  .service-left .card-text {
-  margin-bottom: 60px;
-  }
-}
-@media screen and (max-width: 480px) {
-  .service-left .card-text {
-    margin-bottom: 30px;
-  }
-  .service-img {
-    height: auto;
-  }
-}
+/*Vertical iPad(768 x 1024)*/
 @media screen and (min-width: 768px) {
+  .container {
+    padding: 2rem 2.5rem;
+  }
+
   .service-left .card-text {
     font-size: var(--font-size-large);
     line-height: var(--line-height-xx-large);
+    letter-spacing: -0.555556px;
   }
 }
 
+@media screen and (min-width: 990px) {
 
-
-
-
-/* product */
-@media screen and (min-width: 1200px) {
-  /* > 1200px */
-
-}
-@media screen and (min-width: 1024px) and (max-width: 1200px) {
-  /* 1024px < 1200 px */
-  .container {
-    padding: 0 3.75rem;
+  /* header */
+  .header .container {
+    padding-bottom: 0;
   }
-}
-@media screen and (max-width: 1024px) {
-  /* 768px < 1024px */
 
-  /* product */
+  /* -navbar */
+  .header-navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .logo {
+    margin-right: 3.75rem;
+  }
+
+  .header-navbar .nav-menu .navbar-nav {
+    margin-bottom: 0rem;
+  }
+
+  .nav-menu .nav-item {
+    margin-right: 2.5rem;
+  }
+
+  .header-navbar .btn-secondary {
+    margin-left: 1rem;
+    width: max-content;
+  }
+
+  /* __carousel */
+  .header-carousel {
+    margin-bottom: 6.25rem;
+    margin-top: 4.375rem;
+  }
+
+  /* __tab */
+  .header-tab .nav-tabs .nav-mark {
+    width: unset;
+    padding: unset;
+    background-color: unset;
+    border: unset;
+    border-radius: unset;
+    display: none;
+  }
+
+  .header .shape {
+    display: none;
+  }
+
+  .header-tab .nav-tabs .nav-item {
+    display: flex;
+    padding-bottom: 30px;
+  }
+
+  .header-tab .nav-menu {
+    display: flex;
+  }
+
+  /***********************/
+  /* service */
+  .service .container {
+    display: flex;
+    gap: 30px;
+  }
+
+  .service-img {
+    height: 100%;
+  }
+
+  .service-left,
+  .service-right {
+    width: 50%;
+    margin: 0;
+  }
+  /******************/
+  /* products */
   .product-content {
-    grid-template-columns: repeat(2, 1fr);
-    row-gap: 80px;
+    grid-template-columns: repeat(3,1fr);
   }
-}
-@media screen and (max-width: 680px) {
-  /* < 640px  */
-  .product-content {
-    grid-template-columns: repeat(1,1fr);
-  }
-
-}
-
-
-
-
-
-/* marketing */
-@media screen and (max-width: 932px) {
-  /* 934px */
+  /***********************/
+  /* marketing */
   .marketing-content {
-    display: block;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(3, 1fr) ;
+    column-gap: 30px;
+    row-gap: 0;
+    align-items: start;
   }
-  .marketing-left,
-  .marketing-right {
-    width: 100%;
+  .marketing-content .card.card-horizontal{
+    flex-direction: row;
+    align-items: flex-end;
   }
-  .marketing-left {
-    margin-bottom: 30px;
+  .card-horizontal {
+    margin-top: 2rem;
   }
-  .marketing-right .card {
-    flex-direction: column-reverse;
-    align-items: flex-start;
-    margin-bottom: 2.5rem;
+  .card-horizontal .card-header {
+    margin-bottom: 0;
+    width: 20%;
+    text-align: end;
+  }
+
+  .marketing-content .card.card-img{
+    grid-row: 1/4;
   }
 }
-@media screen and (max-width: 480px) {
-  .marketing-left,
-  .marketing-right .card {
-    margin-bottom: 30px;
+
+/*Tablet(1024 x 768)*/
+@media screen and (min-width: 1024px) {
+  .container {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .header .container {
+    padding-top: 2rem;
+    margin-bottom: 7.5rem;
+  }
+
+  .service .container {
+    margin-bottom: 7.5rem;
+  }
+
+  .product .container {
+    margin-bottom: 7.5rem;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .container {
+    padding-left: 9.375rem;
+    padding-right: 9.375rem;
+  }
+
+  .service-left .card-text {
+    width: 90%;
   }
 }
