--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -469,7 +469,9 @@ a {
 
 .cta .card-footer {
   background-image: url(../img/BG.png);
-  background-position: -1000px;
+  background-position: right;
+  background-repeat: no-repeat;
+  background-size: 2000px;
   height: 358px;
   width: 100%;
   object-fit: cover;
@@ -520,55 +522,54 @@ a {
 }
 
 /* footer__content */
-.footer__content {
-  display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-  margin-top: 122px;
-  margin-bottom: 134px;
+.footer-content {
+  /* display: flex; */
+  /* justify-content: space-between; */
+  /* align-items: stretch; */
+  margin-top: 4.5rem;
+  margin-bottom: 3rem;
+
+  display: grid;
+  row-gap: 2rem;
 }
 
-.footer__content .item {
-  color: var(--black);
-}
-
-.content-left {
-  width: 30%;
-}
-
-.footer__content-left .font--small {
+.footer-content .font--small {
   color: var(--bauhaus);
   line-height: var(--line-height-medium);
-
-  margin-top: 24px;
 }
 
-.media-icon {
-  margin-right: 16px;
-  padding-top: 25px;
+.footer-content .menu-list{
+  display: flex;
+}
+.footer-content .media {
+  margin-bottom: 1rem;
+}
+.footer-content .card-body {
+  flex: unset;
+}
+.media.menu-list .item{
+  margin-right: 1rem;
+}
+.footer .card .media{
+ flex-direction: row;
 }
 
 /* footer__content-right */
-.footer__content-right {
-  width: 70%;
-  display: flex;
-  justify-content: space-between;
-}
 
-.footer__menu .menu__list {
+.footer .menu-list {
+  display: flex;
   flex-direction: column;
 }
-
-.footer__menu .nav-mark {
+.footer .menu-list>.item{
+  padding-bottom: 20px;
   font-weight: var(--font-weight-bold);
 }
-
-.footer__menu .list__item {
-  padding-bottom: 20px;
+.footer .list-item {
+  padding-bottom: 15px;
 }
 
 /* <hr> line */
-.footer__line {
+.line {
   width: 94%;
   height: 1px;
   background: var(--lucky-grey);
@@ -577,42 +578,30 @@ a {
 }
 
 /* footer__fuel */
-.footer__rule {
+.footer-rule {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: space-between;
-  flex-wrap: nowrap;
 
   padding: 40px 0px;
 }
 
-.rule__copyright {
+.footer-rule .menu-list>.item {
   color: var(--bauhaus);
   letter-spacing: 0.2px;
 }
 
-.footer__rule-right {
+.footer-locale {
   width: 70%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.rule__menu {
-  justify-content: space-around;
-}
-
-.rule__menu .item {
-  padding-right: 48px;
-}
-
-.rule__locale {
-  display: flex;
-  align-items: center;
-}
-
 .btn--flex {
   border: none;
+  width: 85px;
   font-weight: var(--font-weight-medium);
   font-size: var(--font-size-medium);
 }
@@ -650,6 +639,16 @@ a {
     .card-body {
       margin-bottom: 1.5rem;
     }
+
+  /******************/
+  /* footer */
+  .footer-content {
+    grid-template-columns: repeat(2,1fr);
+  }
+  .footer-content .card{
+    grid-column: 1/3;
+  }
+
 }
 
 /*Vertical iPad(768 x 1024)*/
@@ -770,6 +769,15 @@ a {
 
   .marketing-content .card.card-img{
     grid-row: 1/4;
+  }
+
+  /******************/
+  /* footer */
+  .footer-content {
+    grid-template-columns: repeat(6,1fr);
+  }
+  .footer-content .card{
+    grid-column: 1/3;
   }
 }
 
