--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -22,7 +22,7 @@ a {
   max-width: 1440px;
   /* change : width: 8 */
   margin: auto;
-  padding: 1.625rem 1.5rem;
+  padding: 0 1.5rem;
 }
 .container-fluid {
   padding-left: 0;
@@ -162,6 +162,12 @@ a {
   left: 0;
   width: 100%;
   background: var(--lighthouse);
+}
+
+.header .container {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-bottom: 4.5rem;
 }
 
 /* header-navbar */
@@ -757,6 +763,9 @@ nav-menu {
   .container {
     padding-left: 5rem;
     padding-right: 5rem;
+  }
+  .header .container {
+    padding-top: 2rem ;
   }
 }
 @media screen and (min-width: 1240px) {
