Fix/service resonsive (#51)
* Feat :update Marketing card class

* Feat : Update responsive marketing

* Fix : Fix @media breakpoint

* Fix : Edit format @media

* Feat : Update header-navbar responsvie

* Feat : Update header-carousel responsive

* Feat : Update header-tab responsive

* Feat : Update global container responsive

* Feat : Update font-css responsive

* REFACTOR : Format @media doc inde.css

* REFACTOR : Format @media doc inde.css

* Fix : Fix .container padding(top-botton)

* Feat : Update service responsive

* Feat : update products responsive

* Feat : Update marketing responsive

* Fix : fix comment

* Fix : fix comment

--- a/practice-02/styles/font.css
+++ b/practice-02/styles/font.css
@@ -8,6 +8,21 @@
   font-size: var(--font-size-base);
   line-height: var(--line-height-small);
 }
+
+.heading-lg {
+  font-size: var(--font-size-x-large);
+  line-height: var(--line-height-x-large);
+  font-weight: var(--font-weight-bold);
+}
+
+/* Card */
+
+.card-header {
+  color: var(--west_chester-grey);
+  font-weight: var(--font-weight-bold);
+  font-size: var(--font-size-small);
+  line-height: var(--line-height-small);
+}
 .heading-lg {
   font-size: var(--font-size-x-large);
   line-height: var(--line-height-x-large);
@@ -23,6 +38,7 @@
 .card-footer {
   font-weight: var(--font-weight-medium);
   line-height: var(--line-height-small);
+  font-size: var(--font-size-base);
 }
 /* font */
 /* .h6-b3-text {
@@ -50,8 +66,10 @@
     line-height: var(--line-height-xx-large);
   }
 }
+
 /* Tablet */
 @media screen and (min-width: 768px) {
+
   /* < 768px */
   .heading-lg {
     font-size: var(--font-size-xxx-large);
