--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -402,33 +402,56 @@ a {
 /*------------------------------------*\
   #marketing-SECTION
 \*------------------------------------*/
-.marketing .container {
-  margin-bottom: 5rem;
-}
-.marketing-content {
-  display: grid;
-  grid-template-columns: repeat(1,1fr);
-  row-gap: 46px;
-  /* display: flex;
-  justify-content: space-between; */
-  /* align-items: center; */
-}
-.marketing .card {
-  width: 100%;
-}
-.marketing-content .card.card-horizontal {
+.marketing__content {
   display: flex;
-  flex-direction: column-reverse;
-  align-items: flex-start;
-  justify-content: space-between;
-
-  padding-top: 17px;
-  border-top: 1px solid var(--west_chester-grey) ;
 }
-.card .card-horizontal-left {
+
+.marketing-left,
+.marketing-right {
+  width: 50%;
+}
+
+.marketing__pic {
+  width: 100%;
+  height: 370px;
+  padding-bottom: 24px;
+
+  object-fit: cover;
+}
+
+/* marketing-right */
+.marketing-right {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  align-items: center;
+  margin-left: 31px;
+}
+
+.marketing-right .card__body {
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  padding-top: 16px;
+  border-top: 1px solid var(--west_chester-grey);
+  margin-top: 33px;
+}
+
+.card--horizontal-block .card__text {
+  margin-bottom: 32px;
+}
+
+.card--horizontal-block .card__title {
+  text-align: right;
+}
+
+.card--horizontal-block:nth-child(1) {
+  width: 70%;
+}
+
+.card--horizontal-block:nth-child(2) {
+  width: 30%;
 }
 /*------------------------------------*\
   #article-SECTION
