--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -49,12 +49,6 @@ a {
   color: var(--black);
 }
 
-.btn:first-child:active {
-  background-color: unset;
-  border-color: unset;
-  color: var(--black);
-}
-
 .btn-primary {
   color: var(--black);
 }
@@ -177,7 +171,7 @@ a {
 }
 
 /* header-navbar */
- /*@Hover::before */
+  /*@Hover::before */
 .header-navbar .nav-menu .item::before {
   content: "";
   width: 0px;
@@ -384,7 +378,7 @@ a {
   #Product-SECTION
 \*------------------------------------*/
 .product .container {
-  margin-top: 120px;
+  margin-bottom: 5rem;
 }
 
 .product-content {
@@ -392,10 +386,8 @@ a {
   flex-wrap: wrap;
   justify-content: space-between; */
   display: grid;
-  column-gap: 30px;
-  row-gap: 120px;
-  grid-template-columns: repeat(3, 1fr);
-  margin-bottom: 120px;
+  row-gap:  2.875rem;
+  grid-template-columns: repeat(1, 1fr);
 }
 
 
@@ -405,10 +397,7 @@ a {
   border-bottom: 1px solid var(--west_chester-grey);
 }
 
-.product-content .card-img-top {
-  margin-bottom: 16px;
 
-}
 
 /*------------------------------------*\
   #marketing-SECTION
@@ -464,7 +453,6 @@ a {
 .card--horizontal-block:nth-child(2) {
   width: 30%;
 }
-
 /*------------------------------------*\
   #article-SECTION
 \*------------------------------------*/
@@ -691,8 +679,19 @@ a {
 @media screen and (min-width: 480px) {
   .service-img {
     height: 45vh;
-}
+  }
 
+  /******************/
+  /* products */
+  .product-content {
+    grid-template-columns: repeat(2,1fr);
+    gap: 30px;
+    row-gap: 7.5rem;
+  }
+    .card-header,
+    .card-body {
+      margin-bottom: 1.5rem;
+    }
 }
 
 /*Vertical iPad(768 x 1024)*/
@@ -784,6 +783,11 @@ a {
     width: 50%;
     margin: 0;
   }
+  /******************/
+  /* products */
+  .product-content {
+    grid-template-columns: repeat(3,1fr);
+  }
 }
 
 /*Tablet(1024 x 768)*/
@@ -802,6 +806,18 @@ a {
     margin-bottom: 7.5rem;
   }
 
+  .header .container {
+    padding-top: 2rem;
+    margin-bottom: 7.5rem;
+  }
+
+  .service .container {
+    margin-bottom: 7.5rem;
+  }
+
+  .product .container {
+    margin-bottom: 7.5rem;
+  }
 }
 
 @media screen and (min-width: 1240px) {
