--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -648,6 +648,13 @@ a {
   .footer-content .card{
     grid-column: 1/3;
   }
+  .footer-rule {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-items: start;
+    align-items: center;
+    padding-bottom: 0;
+  }
 
 }
 
@@ -779,6 +786,10 @@ a {
   .footer-content .card{
     grid-column: 1/3;
   }
+  .footer-rule .menu-list {
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+}
 }
 
 /*Tablet(1024 x 768)*/
