--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -579,10 +579,10 @@ a {
 
 /* footer__fuel */
 .footer-rule {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  /* flex-direction: column;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: space-between; */
 
   padding: 40px 0px;
 }
@@ -595,8 +595,7 @@ a {
 .footer-locale {
   width: 70%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .btn--flex {
