--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -122,7 +122,7 @@ a {
   margin-bottom: 1rem;
 }
 .card-img .card-header {
-  padding-bottom: 14px;
+  padding-bottom: 0.875rem;
 }
 
 .card-img-top  {
@@ -133,7 +133,7 @@ a {
   margin-bottom: 16px;
 
   border-radius: unset;
-  /* padding: -30px; background padding */
+  /* padding: -1.875rem; background padding */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -201,7 +201,7 @@ a {
 }
 
 .header-navbar .nav-menu .navbar-nav {
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
 }
 .header-navbar .navbar-toggler{
   border: none;
@@ -215,7 +215,7 @@ a {
 }
 
 /* .nav-menu .nav-item {
-  margin-right: 40px;
+  margin-right: 2.5rem;
 } */
 
 .nav-menu .item {
@@ -233,12 +233,12 @@ a {
   font-family: var(--font-family);
   text-align: center;
 
-  padding: 20px 0;
+  padding: 1.25rem 0;
 }
 
 /* header-carousel */
 .header-carousel {
-  margin-top: 50px;
+  margin-top: 3.125rem;
   margin-bottom: 2rem;
   width: 100%;
 }
@@ -261,7 +261,7 @@ a {
   background-color: transparent;
 }
 .nav-menu .nav-pills .nav-link {
-  padding-bottom: 30px;
+  padding-bottom: 1.875rem;
   position: relative;
 }
 .header-tab .nav-pills ::before {
@@ -357,7 +357,7 @@ a {
   border: 3px solid transparent;
   border-radius: 8px;
   background-color: var(--white);
-  box-shadow: 1px 0 50px rgb(0 0 0 / 10%);
+  box-shadow: 1px 0 3.125rem rgb(0 0 0 / 10%);
 }
 
 .service-left .card-text {
@@ -392,8 +392,8 @@ a {
 
 
 .product .card-title {
-  padding-bottom: 14px;
-  margin-bottom: 24px;
+  padding-bottom: 0.875rem;
+  margin-bottom: 1.5rem;
   border-bottom: 1px solid var(--west_chester-grey);
 }
 
@@ -408,7 +408,7 @@ a {
 .marketing-content {
   display: grid;
   grid-template-columns: repeat(1,1fr);
-  row-gap: 46px;
+  row-gap: 2.875rem;
   /* display: flex;
   justify-content: space-between; */
   /* align-items: center; */
@@ -422,7 +422,7 @@ a {
   align-items: flex-start;
   justify-content: space-between;
 
-  padding-top: 17px;
+  padding-top: 1rem;
   border-top: 1px solid var(--west_chester-grey) ;
 }
 .card .card-horizontal-left {
@@ -434,7 +434,7 @@ a {
   #article-SECTION
 \*------------------------------------*/
 .Blog_Article .container {
-  padding-top: 158px;
+  padding-top: 7.5rem;
 }
 
 .article__content {
@@ -462,11 +462,11 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
 
-  margin-top: 180px;
+  margin-top: 11.25rem;
 }
 
 .cta .container {
-  padding-top: 120px;
+  padding-top: 7.5rem;
 }
 
 .cta__content {
@@ -482,7 +482,7 @@ a {
 }
 
 .cta__passage .cta__text {
-  padding-top: 24px;
+  padding-top: 1.5rem;
   opacity: 72%;
 }
 
@@ -496,7 +496,7 @@ a {
 }
 
 .cta__button .btn__icon {
-  padding-left: 32px;
+  padding-left: 2rem;
   width: 8px;
   height: 12px;
 }
@@ -507,11 +507,11 @@ a {
   height: 64px;
   background: var(--white);
 
-  filter: drop-shadow(0px 24px 32px rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(0px 1.5rem 2rem rgba(0, 0, 0, 0.1));
 }
 
 .cta__text {
-  margin-top: 24px;
+  margin-top: 1.5rem;
   cursor: pointer;
 }
 
@@ -544,8 +544,8 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: stretch;
-  margin-top: 122px;
-  margin-bottom: 134px;
+  margin-top: 7.5rem;
+  margin-bottom: 7.5rem;
 }
 
 .footer__content .item {
@@ -560,12 +560,12 @@ a {
   color: var(--bauhaus);
   line-height: var(--line-height-medium);
 
-  margin-top: 24px;
+  margin-top: 1.5rem;
 }
 
 .media-icon {
-  margin-right: 16px;
-  padding-top: 25px;
+  margin-right: 1rem;
+  padding-top: 1.625rem;
 }
 
 /* footer__content-right */
@@ -584,7 +584,7 @@ a {
 }
 
 .footer__menu .list__item {
-  padding-bottom: 20px;
+  padding-bottom: 1.25rem;
 }
 
 /* <hr> line */
@@ -603,7 +603,7 @@ a {
   justify-content: space-between;
   flex-wrap: nowrap;
 
-  padding: 40px 0px;
+  padding: 2.5rem 0px;
 }
 
 .rule__copyright {
@@ -623,7 +623,7 @@ a {
 }
 
 .rule__menu .item {
-  padding-right: 48px;
+  padding-right: 3rem;
 }
 
 .rule__locale {
@@ -662,7 +662,7 @@ a {
   /* products */
   .product-content {
     grid-template-columns: repeat(2,1fr);
-    gap: 30px;
+    gap: 1.875rem;
     row-gap: 7.5rem;
   }
     .card-header,
@@ -737,7 +737,7 @@ a {
 
   .header-tab .nav-tabs .nav-item {
     display: flex;
-    padding-bottom: 30px;
+    padding-bottom: 1.875rem;
   }
 
   .header-tab .nav-menu {
@@ -748,7 +748,7 @@ a {
   /* service */
   .service .container {
     display: flex;
-    gap: 30px;
+    gap: 1.875rem;
   }
 
   .service-img {
@@ -770,7 +770,7 @@ a {
   .marketing-content {
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(3, 1fr) ;
-    column-gap: 30px;
+    column-gap: 1.875rem;
     row-gap: 0;
     align-items: start;
   }
@@ -793,7 +793,7 @@ a {
 }
 
 /*Tablet(1024 x 768)*/
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 101.5rem) {
   .container {
     padding-left: 5rem;
     padding-right: 5rem;
@@ -813,7 +813,7 @@ a {
   }
 }
 
-@media screen and (min-width: 1240px) {
+@media screen and (min-width: 122.5rem) {
   .container {
     padding-left: 9.375rem;
     padding-right: 9.375rem;
