--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -577,22 +577,13 @@ a {
   opacity: 0.24;
 }
 
-/* footer__fuel */
-.footer-about {
-  display: grid;
-  /* flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-between; */
-
-  /* padding: 40px 0px; */
-}
-
 .footer-about .menu-list>.item {
   color: var(--bauhaus);
   letter-spacing: 0.2px;
   padding: 0;
   margin-bottom: 1.875rem;
 }
+
 
 .footer-locale {
   width: 70%;
@@ -650,7 +641,7 @@ a {
   .footer-content .card{
     grid-column: 1/3;
   }
-  .footer-rule {
+  .footer-about .nav-menu {
     display: grid;
     grid-template-columns: repeat(2,1fr);
     justify-items: start;
@@ -788,10 +779,14 @@ a {
   .footer-content .card{
     grid-column: 1/3;
   }
-  .footer-rule .menu-list {
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
-}
+    .footer-rule .menu-list {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+    }
+
+    .footer-about .menu-list {
+      flex-direction: row;
+    }
 }
 
 /*Tablet(1024 x 768)*/
